--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
